--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <span id="message-max" class="text-sm text-warm-gray-500">Max. 500 caractères</span>
             </div>
             <div class="mt-1">
-              <textarea id="message" name="message" rows="4" maxlength="500" class="block w-full rounded-md border-warm-gray-300 py-3 px-4 text-warm-gray-900 shadow-sm focus:border-teal-500 focus:ring-teal-500" aria-describedby="message-max"></textarea>
+              <textarea id="message" name="message" rows="4" data-maxlength="500" class="block w-full rounded-md border-warm-gray-300 py-3 px-4 text-warm-gray-900 shadow-sm focus:border-teal-500 focus:ring-teal-500" aria-describedby="message-max"></textarea>
             </div>
           </div>
           <div class="sm:col-span-2 sm:flex sm:justify-end">
@@ -95,7 +95,6 @@
       </div>
     </div>
   </div>
-</div>
-<script src="./SRC/main.js"></script>
+<script src="./SRC/main.js" type="text/javascript"></script>
 </body>
 </html>
